# monadoc-2

./: .gitignore  Dockerfile  docker-compose.yaml  main.tf  monadoc.cabal  monadoc.hs  stack.yaml
.semaphore/: build.sh  deploy.yml  semaphore.yml
function/: bootstrap
source/executable/: Main.hs
terraform/: main.tf
