cabal-version: 2.4
-- https://www.haskell.org/cabal/users-guide/developing-packages.html

name: monadoc
version: 0.0.0.0
synopsis: Haskell documentation
description: Monadoc provides Haskell documentation.

category: Web
license: ISC
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/monadoc
  type: git

executable monadoc
  build-depends:
    aeson ^>= 1.4.4,
    base ^>= 4.12.0,
    base64-bytestring ^>= 1.0.0,
    bytestring ^>= 0.10.8,
    case-insensitive ^>= 1.2.0,
    containers ^>= 0.6.0,
    http-client ^>= 0.6.4,
    http-types ^>= 0.12.3,
    text ^>= 1.2.3,
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specializations
    -Wno-implicit-prelude
    -Wno-missed-specializations
    -Wno-missing-exported-signatures
    -Wno-safe
    -Wno-unsafe
  main-is: monadoc.hs
