cabal-version: 2.4
-- https://www.haskell.org/cabal/users-guide/developing-packages.html

name: monadoc
version: 0.0.0.0
synopsis: Haskell documentation
description: Monadoc provides Haskell documentation.

category: Web
license: ISC
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/monadoc
  type: git

library
  build-depends:
    aeson ^>= 1.4.4,
    base ^>= 4.13.0,
    base64-bytestring ^>= 1.0.0,
    bytestring ^>= 0.10.8,
    Cabal ^>= 3.0.0,
    case-insensitive ^>= 1.2.0,
    containers ^>= 0.6.0,
    http-client ^>= 0.6.4,
    http-client-tls ^>= 0.3.5,
    http-types ^>= 0.12.3,
    tar ^>= 0.5.1,
    text ^>= 1.2.3,
    zlib ^>= 0.6.2,
  default-language: Haskell2010
  exposed-modules: Monadoc
  ghc-options:
    -Weverything
    -Wno-all-missed-specializations
    -Wno-implicit-prelude
    -Wno-missed-specializations
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-safe
    -Wno-unsafe
  hs-source-dirs: source/library

executable monadoc
  build-depends: base, monadoc
  default-language: Haskell2010
  ghc-options: -rtsopts -threaded
  hs-source-dirs: source/executable
  main-is: Main.hs
